Fixed missalign issue

--- a/cernyrobin_django/static/universal2.css
+++ b/cernyrobin_django/static/universal2.css
@@ -1741,6 +1741,21 @@ justify-content: space-around;
 /*     position: absolute; */
 }
 
+.background-center {
+  width: 100%;
+  height: fit-content;
+  min-height: 100vh;
+  background-color: rgb(16, 18, 22);
+
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+/*     position: absolute; */
+}
+
 
 .scroll-background {
   width: 50vw;
